Grace/tests/gibbs/errors/t137.grace
// ERROR = P1018
var negative := -
